--- a/templates/precipitacao.html
+++ b/templates/precipitacao.html
@@ -133,31 +133,75 @@
                             </div>
                             </div>
                             <div class="box-body">
-                                <div  class="col-xs-12">
-                                    <h4>Configurações:</h4>
-                                    <form id="executeARIMA" class="form-inline">
-                                        <div class="form-group">
-                                            <label class="sr-only" for="cidadeInput">Cidade</label>
-                                            <input type="email" class="form-control" id="cidadeInput" placeholder="Cidade">
+                                <div class="row">
+                                    <div  class="col-xs-12">
+                                        <h4>Configurações:</h4>
+                                        <form id="executeARIMA" class="form-inline">
+                                            <div class="form-group">
+                                                <label class="sr-only" for="cidadeInput">Cidade</label>
+                                                <input type="email" class="form-control" id="cidadeInput" placeholder="Cidade">
+                                            </div>
+                                            <button type="submit" class="btn btn-default">Executar</button>
+                                        </form>
+                                        <br>
+                                        <div id="ARIMAsuccessAlert" class="alert alert-success alert-dismissible" role="alert" style="display:none;">
+                                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                            <h4><i class="icon fa fa-check"></i> Sucesso!</h4>
+                                            <h id="ARIMAsuccessMessage"></h>
                                         </div>
-                                        <button type="submit" class="btn btn-default">Executar</button>
-                                    </form>
-                                    <br>
-                                    <div id="successAlert" class="alert alert-success alert-dismissible" role="alert" style="display:none;">
-                                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                                        <h4><i class="icon fa fa-check"></i> Sucesso!</h4>
-                                        <h id="successMessage"></h>
+                                        <div id="ARIMAprocessingAlert" class="alert alert-info alert-dismissible" role="alert" style="display:none;">
+                                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                            <h4><i class="icon fa fa-refresh"></i> Processando</h4>
+                                            <h id="ARIMAprocessingMessage"></h>
+                                        </div> 
+                                        <button id="ARIMAupdateChart" class="btn btn-default" >Última Atualização</button>      
                                     </div>
-                                    <div id="processingAlert" class="alert alert-info alert-dismissible" role="alert" style="display:none;">
-                                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                                        <h4><i class="icon fa fa-refresh"></i> Processando</h4>
-                                        <h id="processingMessage"></h>
-                                    </div>   
-                                    <!-- <a href="/chartRainfallARIMA" class="btn btn-default" id="showChart" style="display:none;">Exibir dados</a > -->      
-                                    <button id="updateChart" class="btn btn-default" style="display:none;">Update Chart</button>    
-                                    <br/><br/><br/>
-                                    <div class="chart">
-                                        <canvas id="ARIMAChart" style="display:none" ></canvas>
+                                </div>
+                                <div id="ARIMADiagnosis"  class="row"  style="display:none">
+                                    <br/>
+                                    <div class="col-xs-2">
+                                        <h4>Informações do Modelo</h4>
+                                        <table id="example2" class="table table-bordered table-hover">
+                                            <tbody>
+                                                <tr>
+                                                    <td><b>Cidade</b></td>
+                                                    <td id="ARIMAcity"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>Data</b></td>
+                                                    <td id="ARIMAdate"></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <table id="example2" class="table table-bordered table-hover">
+                                            <tbody>
+                                                <tr>
+                                                    <td><b>(p, d, q)</b></td>
+                                                    <td id="ARIMApdq"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>RMSE train</b></td>
+                                                    <td id="ARIMARMSEtrain"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>RMSE test</b></td>
+                                                    <td id="ARIMARMSEtest"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>AIC</b></td>
+                                                    <td id="ARIMAAIC"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>BIC</b></td>
+                                                    <td id="ARIMABIC"></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="col-xs-10"> 
+                                        <div class="chart">
+                                            <canvas id="ARIMAChart" style="height:350px">></canvas>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -167,7 +211,106 @@
                     </div>
                     <!-- /.col -->
                 </div>
-                <!-- /.row -->    
+                <!-- /.row -->
+                <div class="row">
+                    <div class="col-md-12">
+                        <!-- Default box -->
+                        <div class="box">
+                            <div class="box-header with-border">
+                            <h3 class="box-title">SARIMA (Seasonal Autoregressive Integrated Moving Average)</h3>
+                    
+                            <div class="box-tools pull-right">
+                                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
+                                        title="Collapse">
+                                <i class="fa fa-minus"></i></button>
+                                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                                <i class="fa fa-times"></i></button>
+                            </div>
+                            </div>
+                            <div class="box-body">
+                                <div class="row">
+                                    <div  class="col-xs-12">
+                                        <h4>Configurações:</h4>
+                                        <form id="executeSARIMA" class="form-inline">
+                                            <div class="form-group">
+                                                <label class="sr-only" for="cidadeInput">Cidade</label>
+                                                <input type="email" class="form-control" id="cidadeInput" placeholder="Cidade">
+                                            </div>
+                                            <button type="submit" class="btn btn-default">Executar</button>
+                                        </form>
+                                        <br>
+                                        <div id="SARIMAsuccessAlert" class="alert alert-success alert-dismissible" role="alert" style="display:none;">
+                                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                            <h4><i class="icon fa fa-check"></i> Sucesso!</h4>
+                                            <h id="SARIMAsuccessMessage"></h>
+                                        </div>
+                                        <div id="SARIMAprocessingAlert" class="alert alert-info alert-dismissible" role="alert" style="display:none;">
+                                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                            <h4><i class="icon fa fa-refresh"></i> Processando</h4>
+                                            <h id="SARIMAprocessingMessage"></h>
+                                        </div> 
+                                        <button id="SARIMAupdateChart" class="btn btn-default" >Última Atualização</button>      
+                                    </div>
+                                </div>
+                                <div id="SARIMADiagnosis"  class="row"  style="display:none">
+                                    <br/>
+                                    <div class="col-xs-2">
+                                        <h4>Informações do Modelo</h4>
+                                        <table id="example2" class="table table-bordered table-hover">
+                                            <tbody>
+                                                <tr>
+                                                    <td><b>Cidade</b></td>
+                                                    <td id="SARIMAcity"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>Data</b></td>
+                                                    <td id="SARIMAdate"></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <table id="example2" class="table table-bordered table-hover">
+                                            <tbody>
+                                                <tr>
+                                                    <td><b>(p, d, q)</b></td>
+                                                    <td id="SARIMApdq"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>(P, D, Q, s)</b></td>
+                                                    <td id="SARIMAPDQs"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>RMSE train</b></td>
+                                                    <td id="SARIMARMSEtrain"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>RMSE test</b></td>
+                                                    <td id="SARIMARMSEtest"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>AIC</b></td>
+                                                    <td id="SARIMAAIC"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>BIC</b></td>
+                                                    <td id="SARIMABIC"></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="col-xs-10"> 
+                                        <div class="chart">
+                                            <canvas id="SARIMAChart" style="height:350px">></canvas>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.box-body -->
+                        </div>
+                        <!-- /.box -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->     
             </section>
             <!-- /.content -->
         </div>
