--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,8 @@
     <link rel="stylesheet" href="/static/bower_components/bootstrap-daterangepicker/daterangepicker.css">
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet" href="/static/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
-
+    <!-- Loading Icon -->   
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -34,9 +35,29 @@
 
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-    <script src="{{ url_for('static', filename='PredictRainfall.js') }}"></script>
+    <style>
+        .no-js #loader { display: none;  }
+        .js #loader { display: block; position: absolute; left: 100px; top: 0; }
+        .se-pre-con {
+            position: fixed;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            background: url(/static/images/loader-64x/Preloader_2.gif) center no-repeat #fff;
+        }    
+    </style>
+    <script>
+        $(window).load(function() { 
+            // Animate loader off screen
+            $(".se-pre-con").fadeOut("slow");;
+        });
+    </script>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
+    <!-- Loading Icon -->   
+    <div class="se-pre-con"></div>
     <div class="wrapper">
 
         <header class="main-header">
@@ -245,6 +266,6 @@
     <!-- AdminLTE for demo purposes -->
     <script src="/static/dist/js/demo.js"></script>
 
-    <script src="/static/PredictRainfall.js"></script>
+    <script src="/static/JS/PredictRainfall.js"></script>
 </body>
 </html>
