ARIMA test grid

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
                 </li>
                 <li class="header"><i class="fa fa-cogs"></i>&nbsp;&nbsp;&nbsp;MACHINE LEARNING</li>
                 <li>
-                    <a href="#">
+                    <a href="/temperatura">
                         <i class="fa fa-thermometer-2"></i> <span>Temperatura</span>
                     </a>
                 </li>
@@ -165,7 +165,7 @@
                                             <div class="icon">
                                             <i class="ion ion-thermometer"></i>
                                             </div>
-                                            <a href="#" class="small-box-footer">Acessar página <i class="fa fa-arrow-circle-right"></i></a>
+                                            <a href="/temperatura" class="small-box-footer">Acessar página <i class="fa fa-arrow-circle-right"></i></a>
                                         </div>
                                     </div>
                                     <!-- ./col -->
