--- a/templates/temperatura.html
+++ b/templates/temperatura.html
@@ -171,7 +171,7 @@
                                                 <input class="form-control" id="ARIMAq" placeholder="q" style="width:40px">
                                             </div>
                                             )</h4>
-                                            <button type="submit" class="btn btn-default">Gerar Previsões</button>
+                                            <button type="submit" class="btn btn-default">Executar</button>
                                         </form>
                                         <br>
                                         <div id="ARIMAsuccessAlert" class="alert alert-success alert-dismissible" role="alert" style="display:none;">
