--- a/templates/temperatura.html
+++ b/templates/temperatura.html
@@ -105,8 +105,8 @@
                             <i class="fa fa-tint"></i> <span>Precipitação</span>
                         </a>
                     </li>
-                    <li class="treeview">
-                        <a href="#">
+                    <li>
+                        <a href="/cotacao">
                             <i class="fa fa-usd"></i> <span>Cotações de Commodity</span>
                         </a>
                     </li>
