--- a/templates/cotacao.html
+++ b/templates/cotacao.html
@@ -101,12 +101,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="/precipitacao">
                             <i class="fa fa-tint"></i> <span>Precipitação</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/cotacao">
+                        <a href="#">
                             <i class="fa fa-usd"></i> <span>Cotações de Commodity</span>
                         </a>
                     </li>
@@ -121,7 +121,7 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    Precipitação
+                    Cotação de Commodity
                     <small>Execução de modelos de Machine Learning</small>
                 </h1>
                     <ol class="breadcrumb">
@@ -154,7 +154,10 @@
                                         <form id="executeARIMA" class="form-inline">
                                             <div class="form-group">
                                                 <label class="sr-only" for="cidadeInput">Estações</label>
-                                                <select id="stationsARIMA" class="form-control select2" style="width: 400px;">
+                                                <select id="ARIMAUFs" class="form-control select2" style="width: 200px;">
+                                                        <opttion value=''> </opttion>
+                                                    </select>
+                                                <select id="produtosARIMA" class="form-control select2" style="width: 200px;">
                                                     <opttion value=''> </opttion>
                                                 </select>
                                                 <h4>ARIMA(
@@ -184,8 +187,9 @@
                                             <h4><i class="icon fa fa-refresh"></i> Processando</h4>
                                             <h id="ARIMAprocessingMessage"></h>
                                         </div> 
-                                        <button id="ARIMAparameters" class="btn btn-default" >Buscar Parâmetros</button>      
-                                        <button id="ARIMAupdateChart" class="btn btn-default" >Última Atualização</button>     
+                                            
+                                        <button id="ARIMAupdateChart" class="btn btn-default" >Buscar Parâmetros</button>  
+                                        <button id="ARIMAupdateChart2" class="btn btn-default" >Última Atualização</button>     
                                     </div>
                                 </div>
                                 <div id="ARIMABestParameters"  class="row"  style="display:none">
@@ -221,8 +225,12 @@
                                         <table id="example2" class="table table-bordered table-hover">
                                             <tbody>
                                                 <tr>
-                                                    <td><b>Cidade</b></td>
-                                                    <td id="ARIMAcity"></td>
+                                                    <td><b>UF</b></td>
+                                                    <td id="ARIMAuf"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><b>Produto</b></td>
+                                                    <td id="ARIMAproduct"></td>
                                                 </tr>
                                                 <tr>
                                                     <td><b>Data</b></td>
@@ -274,107 +282,6 @@
                         <!-- Default box -->
                         <div class="box">
                             <div class="box-header with-border">
-                            <h3 class="box-title">SARIMA (Seasonal Autoregressive Integrated Moving Average)</h3>
-                    
-                            <div class="box-tools pull-right">
-                                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
-                                        title="Collapse">
-                                <i class="fa fa-minus"></i></button>
-                                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                                <i class="fa fa-times"></i></button>
-                            </div>
-                            </div>
-                            <div class="box-body">
-                                <div class="row">
-                                    <div  class="col-xs-12">
-                                        <h4>Configurações:</h4>
-                                        <form id="executeSARIMA" class="form-inline">
-                                            <div class="form-group">
-                                                <label class="sr-only" for="cidadeInput">Estações</label>
-                                                <select id="stationsSARIMA" class="form-control select2" style="width: 400px;">
-                                                    <opttion value=''></opttion>
-                                                </select>
-                                            </div>
-                                            <button type="submit" class="btn btn-default">Executar</button>
-                                        </form>
-                                        <br>
-                                        <div id="SARIMAsuccessAlert" class="alert alert-success alert-dismissible" role="alert" style="display:none;">
-                                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                                            <h4><i class="icon fa fa-check"></i> Sucesso!</h4>
-                                            <h id="SARIMAsuccessMessage"></h>
-                                        </div>
-                                        <div id="SARIMAprocessingAlert" class="alert alert-info alert-dismissible" role="alert" style="display:none;">
-                                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                                            <h4><i class="icon fa fa-refresh"></i> Processando</h4>
-                                            <h id="SARIMAprocessingMessage"></h>
-                                        </div> 
-                                        <button id="SARIMAupdateChart" class="btn btn-default" >Última Atualização</button>      
-                                    </div>
-                                </div>
-                                <div id="SARIMADiagnosis"  class="row"  style="display:none">
-                                    <br/>
-                                    <div class="col-xs-2">
-                                        <h4>Informações do Modelo</h4>
-                                        <table id="example2" class="table table-bordered table-hover">
-                                            <tbody>
-                                                <tr>
-                                                    <td><b>Cidade</b></td>
-                                                    <td id="SARIMAcity"></td>
-                                                </tr>
-                                                <tr>
-                                                    <td><b>Data</b></td>
-                                                    <td id="SARIMAdate"></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                        <table id="example2" class="table table-bordered table-hover">
-                                            <tbody>
-                                                <tr>
-                                                    <td><b>(p, d, q)</b></td>
-                                                    <td id="SARIMApdq"></td>
-                                                </tr>
-                                                <tr>
-                                                    <td><b>(P, D, Q, s)</b></td>
-                                                    <td id="SARIMAPDQs"></td>
-                                                </tr>
-                                                <tr>
-                                                    <td><b>RMSE train</b></td>
-                                                    <td id="SARIMARMSEtrain"></td>
-                                                </tr>
-                                                <tr>
-                                                    <td><b>RMSE test</b></td>
-                                                    <td id="SARIMARMSEtest"></td>
-                                                </tr>
-                                                <tr>
-                                                    <td><b>AIC</b></td>
-                                                    <td id="SARIMAAIC"></td>
-                                                </tr>
-                                                <tr>
-                                                    <td><b>BIC</b></td>
-                                                    <td id="SARIMABIC"></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <div class="col-xs-10"> 
-                                        <div class="chart">
-                                            <canvas id="SARIMAChart" style="height:350px">></canvas>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- /.box-body -->
-                        </div>
-                        <!-- /.box -->
-                    </div>
-                    <!-- /.col -->
-                </div>
-                <!-- /.row -->
-                <div class="row">
-                    <div class="col-md-12">
-                        <!-- Default box -->
-                        <div class="box">
-                            <div class="box-header with-border">
                             <h3 class="box-title">LSTM Recurrent Neural Network</h3>
                     
                             <div class="box-tools pull-right">
@@ -391,8 +298,10 @@
                                         <h4>Configurações:</h4>
                                         <form id="executeLSTM" class="form-inline">
                                             <div class="form-group">
-                                                <label class="sr-only" for="cidadeInput">Estações</label>
-                                                <select id="stationsLSTM" class="form-control select2" style="width: 400px;">
+                                                <select id="LSTMUFs" class="form-control select2" style="width: 200px;">
+                                                        <opttion value=''> </opttion>
+                                                </select>
+                                                <select id="produtosLSTM" class="form-control select2" style="width: 200px;">
                                                     <opttion value=''></opttion>
                                                 </select>
                                             </div>
@@ -514,6 +423,6 @@
     <!-- ChartJS -->
     <script src="/static/bower_components/Chart.js/Chart.min.js"></script>
 
-    <script src="/static/JS/PredictRainfall.js"></script>
+    <script src="/static/JS/PredictQuotation.js"></script>
 </body>
 </html>
