--- a/templates/index.html
+++ b/templates/index.html
@@ -111,8 +111,8 @@
                         <i class="fa fa-tint"></i> <span>Precipitação</span>
                     </a>
                 </li>
-                <li class="treeview">
-                    <a href="#">
+                <li>
+                    <a href="/cotacao">
                         <i class="fa fa-usd"></i> <span>Cotações de Commodity</span>
                     </a>
                 </li>
@@ -207,7 +207,7 @@
                                             <div class="icon">
                                             <i class="ion ion-social-usd"></i>
                                             </div>
-                                            <a href="#" class="small-box-footer">Acessar página <i class="fa fa-arrow-circle-right"></i></a>
+                                            <a href="/cotacao" class="small-box-footer">Acessar página <i class="fa fa-arrow-circle-right"></i></a>
                                         </div>
                                     </div>
                                     <!-- ./col -->
